// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.loadtest.resourcesetup;

// import "wfa/measurement/api/v2alpha/event_annotations.proto";

option java_package = "org.wfanet.measurement.loadtest.resourcesetup";
option java_multiple_files = true;

message Resources {
  message Resource {
    string name = 1;

    message MeasurementConsumer {
      bytes authority_key_identifier = 1;
      string api_key = 2;
    }
    message DataProvider {
      bytes authority_key_identifier = 1;
      string display_name = 2;
    }
    message DuchyCertificate {
      string duchy_id = 1;
    }
    oneof resource {
      MeasurementConsumer measurement_consumer = 2;
      DataProvider data_provider = 3;
      DuchyCertificate duchy_certificate = 4;
    }
  }
  repeated Resource resources = 1;
}
